[gd_scene load_steps=16 format=2]

[ext_resource path="res://src/CreditsScreen.gd" type="Script" id=1]
[ext_resource path="res://assets/Tiles/BGTile (1).png" type="Texture" id=2]
[ext_resource path="res://assets/Tiles/BGTile (7).png" type="Texture" id=3]
[ext_resource path="res://assets/Tiles/BGTile (4).png" type="Texture" id=4]
[ext_resource path="res://assets/Tiles/BGTile (3).png" type="Texture" id=5]
[ext_resource path="res://assets/fonts/Fino.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://assets/fonts/retro_computer_personal_use.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://assets/sounds/ChiptuneIntroClipped.ogg" type="AudioStream" id=8]

[sub_resource type="TileSet" id=1]
0/name = "BGTile (1).png 0"
0/texture = ExtResource( 2 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "BGTile (3).png 1"
1/texture = ExtResource( 5 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 64, 64 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "BGTile (4).png 2"
2/texture = ExtResource( 4 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 0, 64, 64 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0
3/name = "BGTile (7).png 3"
3/texture = ExtResource( 3 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 0, 32, 64, 32 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0

[sub_resource type="DynamicFont" id=2]
size = 55
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=3]
size = 25
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=4]
size = 28
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=5]
size = 25
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=6]
size = 20
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=7]
size = 20
font_data = ExtResource( 7 )

[node name="CreditsScreen" type="Node2D"]
script = ExtResource( 1 )

[node name="Background" type="TileMap" parent="."]
tile_set = SubResource( 1 )
format = 1
tile_data = PoolIntArray( 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0, 10, 0, 0, 11, 0, 0, 12, 0, 0, 13, 0, 0, 14, 0, 0, 15, 0, 0, 65536, 2, 0, 65537, 1, 0, 65538, 2, 0, 65539, 1, 0, 65540, 2, 0, 65541, 1, 0, 65542, 2, 0, 65543, 1, 0, 65544, 2, 0, 65545, 1, 0, 65546, 2, 0, 65547, 1, 0, 65548, 2, 0, 65549, 1, 0, 65550, 2, 0, 65551, 1, 0, 131072, 1, 0, 131073, 2, 0, 131074, 1, 0, 131075, 2, 0, 131076, 1, 0, 131077, 2, 0, 131078, 1, 0, 131079, 2, 0, 131080, 1, 0, 131081, 2, 0, 131082, 1, 0, 131083, 2, 0, 131084, 1, 0, 131085, 2, 0, 131086, 1, 0, 131087, 2, 0, 196608, 2, 0, 196609, 1, 0, 196610, 2, 0, 196611, 1, 0, 196612, 2, 0, 196613, 1, 0, 196614, 2, 0, 196615, 1, 0, 196616, 2, 0, 196617, 1, 0, 196618, 2, 0, 196619, 1, 0, 196620, 2, 0, 196621, 1, 0, 196622, 2, 0, 196623, 1, 0, 262144, 1, 0, 262145, 2, 0, 262146, 1, 0, 262147, 2, 0, 262148, 1, 0, 262149, 2, 0, 262150, 1, 0, 262151, 2, 0, 262152, 1, 0, 262153, 2, 0, 262154, 1, 0, 262155, 2, 0, 262156, 1, 0, 262157, 2, 0, 262158, 1, 0, 262159, 2, 0, 327680, 2, 0, 327681, 1, 0, 327682, 2, 0, 327683, 1, 0, 327684, 2, 0, 327685, 1, 0, 327686, 2, 0, 327687, 1, 0, 327688, 2, 0, 327689, 1, 0, 327690, 2, 0, 327691, 1, 0, 327692, 2, 0, 327693, 1, 0, 327694, 2, 0, 327695, 1, 0, 393216, 1, 0, 393217, 2, 0, 393218, 1, 0, 393219, 2, 0, 393220, 1, 0, 393221, 2, 0, 393222, 1, 0, 393223, 2, 0, 393224, 1, 0, 393225, 2, 0, 393226, 1, 0, 393227, 2, 0, 393228, 1, 0, 393229, 2, 0, 393230, 1, 0, 393231, 2, 0, 458752, 2, 0, 458753, 1, 0, 458754, 2, 0, 458755, 1, 0, 458756, 2, 0, 458757, 1, 0, 458758, 2, 0, 458759, 1, 0, 458760, 2, 0, 458761, 1, 0, 458762, 2, 0, 458763, 1, 0, 458764, 2, 0, 458765, 1, 0, 458766, 2, 0, 458767, 1, 0, 524288, 1, 0, 524289, 2, 0, 524290, 1, 0, 524291, 2, 0, 524292, 1, 0, 524293, 2, 0, 524294, 1, 0, 524295, 2, 0, 524296, 1, 0, 524297, 2, 0, 524298, 1, 0, 524299, 2, 0, 524300, 1, 0, 524301, 2, 0, 524302, 1, 0, 524303, 2, 0, 589824, 3, 0, 589825, 3, 0, 589826, 3, 0, 589827, 3, 0, 589828, 3, 0, 589829, 3, 0, 589830, 3, 0, 589831, 3, 0, 589832, 3, 0, 589833, 3, 0, 589834, 3, 0, 589835, 3, 0, 589836, 3, 0, 589837, 3, 0, 589838, 3, 0, 589839, 3, 0 )

[node name="ThankYou" type="Label" parent="." groups=[
"credits",
]]
margin_left = 263.5
margin_top = 137.545
margin_right = 762.5
margin_bottom = 268.545
custom_fonts/font = SubResource( 2 )
text = "Thank you
for playing!"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameDevelopCredit" type="Label" parent="." groups=[
"credits",
]]
margin_left = 74.3542
margin_top = 335.129
margin_right = 979.354
margin_bottom = 466.129
custom_fonts/font = SubResource( 3 )
text = "Game Design and Development - Andrew Stafford"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ThirdPartyHeader" type="Label" parent="." groups=[
"credits",
]]
margin_left = 165.373
margin_top = 428.455
margin_right = 861.373
margin_bottom = 559.455
custom_fonts/font = SubResource( 4 )
text = "Third-Party Assets"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ThirdPartyTypeHeaders" type="Label" parent="." groups=[
"credits",
]]
margin_left = 153.881
margin_top = 481.584
margin_right = 849.881
margin_bottom = 1197.58
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0, 0.866667, 0.745098, 1 )
custom_constants/line_spacing = 5
text = "Textures








Sounds







Fonts"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ThirdPartyAssets" type="Label" parent="." groups=[
"credits",
]]
margin_left = -11.4525
margin_top = 526.771
margin_right = 1022.55
margin_bottom = 823.771
custom_fonts/font = SubResource( 6 )
text = "\"The Robot\" sprite set - gameart2d.com

\"Ninja Adventure\" sprite set - gameart2d.com

\"Sci-Fi Platformer\" tileset - gameart2d.com

\"Cogwheel\" texture - rawpixel.com

\"The Boy\" texture - gameart2d.com


\"Chiptune Intro\" - zagi2 under CC BY-NC 3.0,
		no changes were made
		
\"2018-11-02\" - Doctor_Dreamchip

\"Electric Zap\" - michael_grinnell

\"8bit Jump\" - plasterbrain


\"Fino\" - dafont.com

\"Retro Computer\" - dafont.com"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreditsVisibility" type="VisibilityNotifier2D" parent="ThirdPartyAssets"]
position = Vector2( 515.421, 730.714 )
scale = Vector2( 18.0089, 1 )

[node name="RawpixelLink" type="LinkButton" parent="." groups=[
"credits",
]]
margin_left = 562.577
margin_top = 705.856
margin_right = 804.577
margin_bottom = 732.856
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 0.0392157, 0.188235, 0.756863, 1 )
text = "rawpixel.com"
underline = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChiptuneLink" type="LinkButton" parent="." groups=[
"credits",
]]
margin_left = 196.74
margin_top = 856.291
margin_right = 438.74
margin_bottom = 883.291
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 0.0392157, 0.188235, 0.756863, 1 )
text = "\"Chiptune Intro\""
underline = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Zagi2Link" type="LinkButton" parent="." groups=[
"credits",
]]
margin_left = 463.978
margin_top = 856.231
margin_right = 705.978
margin_bottom = 883.231
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 0.0392157, 0.188235, 0.756863, 1 )
text = "zagi2"
underline = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CCBYNCLink" type="LinkButton" parent="." groups=[
"credits",
]]
margin_left = 645.507
margin_top = 855.983
margin_right = 887.507
margin_bottom = 882.983
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 0.0392157, 0.188235, 0.756863, 1 )
text = "CC BY-NC 3.0"
underline = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IntroPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -10.0
autoplay = true
[connection signal="screen_exited" from="ThirdPartyAssets/CreditsVisibility" to="." method="_on_CreditsVisibility_screen_exited"]
[connection signal="pressed" from="RawpixelLink" to="." method="_on_RawpixelLink_pressed"]
[connection signal="pressed" from="ChiptuneLink" to="." method="_on_ChiptuneName_pressed"]
[connection signal="pressed" from="Zagi2Link" to="." method="_on_Zagi2Link_pressed"]
[connection signal="pressed" from="CCBYNCLink" to="." method="_on_CCBYNCLink_pressed"]
